Unite into one SCSS

--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/sport.html
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/sport.html
@@ -11,32 +11,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
     <title>BBC-SPORT</title>
-    <link rel="stylesheet" href="dist/sport.css">
+    <link rel="stylesheet" href="dist/style_final.css">
 
 </head>
 
 <body>
-
-  <!--Banner -->
-  <div class="banner">        
-    <div class="navbar">
-        <ul> 
-            <li><a href="" class="BBC_logo firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
-            <li><a href="" class="BBC_logo secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
-            <li><a href="" class="BBC_logo thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
-            <li><a href="" class="BBC_LOG_2">|</a></li>  
-            <li><a href="home.html">Home</a></li> 
-            <li> <a href="News.html">News</a></li> 
-            <li> <a href="sport.html">Sport</a> </li>
-            <div class="search_box">
-            <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
-            <a class="Search-btn" href="">
-                <i class="fas fa-search"></i>
-            </a>
-            </li>
+     <!--Banner--> 
+     <div class="banner">        
+        <div class="banner__navbar"> 
+            <ul> 
+                <li><a href="" class="banner__navbar__BBC_logo__firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="banner__navbar__BBC_logo__secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="banner__navbar__BBC_logo__thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
+                <li><a href="" class="banner__navbar__BBC_logo__BBC_LOG_2">|</a></li>  
+                <li><a href="home.html">Home</a></li> 
+                <li> <a href="News.html ">News</a></li> 
+                <li> <a href="sport.html">Sport</a> </li>
+                <div class="banner__navbar__search_box">
+                <input class="banner__navbar__search_box__search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+                <a class="banner__navbar__search_box__Search-btn" href=""><i class="fas fa-search"></i></a>
+                </div>
+            </ul>
         </div>
-        </ul>
     </div>
+
 
     <div class="wrappersport">
         <div class="boxsport boxsport--up1">
