--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.html
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC-News</title>
-    <link rel="stylesheet" href="dist\news_updated.css">
+    <link rel="stylesheet" href="dist/style_final.css">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
