--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/sport.html
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/sport.html
@@ -60,9 +60,9 @@
                 <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptatum provident totam iusto ad harum assumenda.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis deserunt deleniti accusamus dolor quae hic amet aspernatur adipisci, velit ratione laborum quia maxime expedita.</p>
                 <div class="list-inline">
-                    <p>1066</p>
+                    <p>1066<i class="fas fa-comment-alt"></i></p>
                     <p>European Football</p>
-                    <p>2h</p>
+                    <p>2h<i class="far fa-clock"></i></p>
                 </div>
             </div>
         </div>
@@ -73,9 +73,9 @@
             <div class="text">
                <h5>Lorem ipsum dolor sit amet consectetur.</h5>
                <div class="list-inline">
-                    <p>1066</p>
+                    <p>1066<i class="fas fa-comment-alt"></i></p>
                     <p>European Football</p>
-                    <p>2h</p>
+                    <p>2h<i class="far fa-clock"></i></p>
                 </div> 
             </div>
         </div>
@@ -135,31 +135,7 @@
                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia.</h5>
             </div>
         </div>
-        <div class="sider">
-            <div class="scores">
-                <h2>Football Secores</h2>
-                <ul>
-                    <li>Premier League</li>
-                    <li>More</li>
-                </ul>
-                <div class="scores__item">
-                    <p>milan <span>4</span><span>1</span>inter</p>
-                </div>
-                <div class="scores__item">
-                    <p>milan <span>4</span><span>1</span>inter</p>
-                </div>
-                <div class="scores__item">
-                    <p>milan <span>4</span><span>1</span>inter</p>
-                </div>
-                <div class="scores__item">
-                    <p>milan <span>4</span><span>1</span>inter</p>
-                </div>
-                <div class="scores__item">
-                    <p>milan <span>4</span><span>1</span>inter</p>
-                </div>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-        </div>
+        
 
 
    
