--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -74,7 +74,7 @@
         </div>
         <div class="dealGrid__dealbox">
             <img src="img/dealbox5.jpg">
-            <p>eufy Security Solo IndoorCam P24, 2K Pan..</p>
+            <p>Eufy Security Solo IndoorCam P24, 2K Pan..</p>
             <h4>$39.99</h4>
         </div>
         <div class="dealGrid__dealbox">
