amazon deal page

--- a/01-HTML-CSS/06-BEM model/amazon/Deal.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Deal.html
@@ -54,7 +54,9 @@
         </div>
         
         <div class="dealGrid__dealbox--dealbox1">
-            <img src="img/dealbox1.jpg">
+            <video controls="autoplay"> <source src="img/videodeal.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
            
          </div>
         <div class="dealGrid__dealbox">
