--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/home.html
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC-HOME</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/style_final.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
@@ -17,31 +17,28 @@
 
 <body>
 
-     <!--Banner -->
+     <!--Banner--> 
      <div class="banner">        
-        <div class="navbar">
+        <div class="banner__navbar"> 
             <ul> 
-                <li><a href="" class="BBC_logo firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
-                <li><a href="" class="BBC_logo secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
-                <li><a href="" class="BBC_logo thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
-                <li><a href="" class="BBC_LOG_2">|</a></li>  
+                <li><a href="" class="banner__navbar__BBC_logo__firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="banner__navbar__BBC_logo__secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="banner__navbar__BBC_logo__thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
+                <li><a href="" class="banner__navbar__BBC_logo__BBC_LOG_2">|</a></li>  
                 <li><a href="home.html">Home</a></li> 
-                <li> <a href="News.html">News</a></li> 
+                <li> <a href="News.html ">News</a></li> 
                 <li> <a href="sport.html">Sport</a> </li>
-                <div class="search_box">
-                <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
-                <a class="Search-btn" href="">
-                    <i class="fas fa-search"></i>
-                </a>
-                </li>
-            </div>
+                <div class="banner__navbar__search_box">
+                <input class="banner__navbar__search_box__search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+                <a class="banner__navbar__search_box__Search-btn" href=""><i class="fas fa-search"></i></a>
+                </div>
             </ul>
         </div>
-
+    </div>
 
     <div class="homecontainer">
 
-        <div class="homebox homebox1">
+        <div class="homebox__homebox1">
 
             <h1>Channel rescue operation 
                 after<br> dozens of migrants drown</h1>
@@ -54,7 +51,7 @@
 
         </div>
 
-        <div class="homebox homebox2">
+        <div class="homebox__homebox2">
 
             <P>Migrants die in biggest loss
                 of life in Channel
@@ -63,7 +60,7 @@
 
         </div>
 
-        <div class="homebox homebox3">
+        <div class="homebox__homebox3">
 
             <P>Shooting of black US
                 jogger - three men found
@@ -74,7 +71,7 @@
         </div>
 
 
-        <div class="homebox homebox4">
+        <div class="homebox__homebox4">
 
             <P>The global spread of and
                 Americanism
@@ -84,7 +81,7 @@
         </div>
 
 
-        <div class="homebox homebox5">
+        <div class="homebox__homebox5">
 
             <P>India's Obscure melodious
                 tradition
