--- a/01-HTML-CSS/06-BEM model/amazon/service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/service.html
@@ -11,12 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
-    ¬
+
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/amazon.css">
+    <link rel="stylesheet" href="dist/amazon2.css">
     <title>Service</title>
 </head>
 
@@ -34,19 +34,52 @@
         <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
         <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
     </div>
-    <h1>we're here to help</h1>
+
+    <!-- <h1>we're here to help</h1> -->
 
     <div class="serviceGrid">
+        <div class="serviceGrid__title">
+            <h1>we're here to help</h1>
 
-        <div class="serviceGrid__option"><img src="img/_service/01_orders.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/02_returns.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/03_help.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/04_digital.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/05_prime.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/06_payments.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/07_account.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/08_covid.png"></div>
-        <div class="serviceGrid__option"><img src="img/_service/09_safe.png"></div>
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/01_orders.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/02_returns.png">
+        </div>
+        <div class="serviceGrid__option">
+            <div class="serviceGrid__option">
+                <h2>your orders</h2>
+                <h3>track your packages</h3><img src="img/_service/03_help.png">
+            </div>
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/04_digital.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/05_prime.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/06_payments.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/07_account.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/08_covid.png">
+        </div>
+        <div class="serviceGrid__option">
+            <h2>your orders</h2>
+            <h3>track your packages</h3><img src="img/_service/09_safe.png">
+        </div>
 
     </div>
 </body>
