--- a/01-HTML-CSS/06-BEM model/amazon/Alex-Service.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Alex-Service.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/76fdd0e120.js" crossorigin="anonymous"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="dist/amazon2.css">
+    <link rel="stylesheet" href="dist/amazon.css">
     <title>Service</title>
 </head>
 
@@ -29,10 +29,10 @@
     </div>
 
     <div class="lowerHeader">
-        <div class="lowerHeader__item"><a href="home.html">Home</a></div>
-        <div class="lowerHeader__item"><a href="Deal.html">Deal</a></div>
-        <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
-        <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
+        <div class="lowerHeader__item"><a href="Michael-home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Shani-Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Alex-Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Omri-Registry.html">Registry</a></div>
     </div>
 
     <!-- <h1>we're here to help</h1> -->
