--- a/01-HTML-CSS/06-BEM model/amazon/Michael-home.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Michael-home.html
@@ -41,19 +41,19 @@
     </div>
 
     <div class="lowerHeader">
-        <div class="lowerHeader__item"><a href="home.html">Home</a></div>
-        <div class="lowerHeader__item"><a href="Deal.html">Deal</a></div>
-        <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
-        <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
+        <div class="lowerHeader__item"><a href="Michael-home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Shani-Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Alex-Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Omri-Registry.html">Registry</a></div>
     </div>
 
 
     <div class="box">
 
         <div class="box__boxItem--boxItem1">
-            <div class="arrowLeft"><i class="fas fa-2x fa-chevron-left"></i></div>
+            <div class="arrow arrowLeft"><i class="fas fa-2x fa-chevron-left"></i></div>
             <img src="img/carousel.jpg" alt="">
-            <div class="arrowRight"><i class="fas fa-2x fa-chevron-right"></i></div>
+            <div class="arrow arrowRight"><i class="fas fa-2x fa-chevron-right"></i></div>
         </div>
         <div class="box__boxItem">Electronics<img src="img/1.1.jpg" alt=""><span>See More</span></div>
         <div class="box__boxItem">Shipping<img src="img/1.2.jpg" alt=""><span>See More</span></div>
@@ -64,6 +64,7 @@
         <div class="box__boxItem">Deal<img src="img/2.3.JPG" alt=""><span>See More</span></div>
         <div class="box__boxItem">Deal<img src="img/2.4.JPG" alt=""><span>See More</span></div>
     </div>
+
 
 
 
