--- a/01-HTML-CSS/06-BEM model/amazon/Omri-Registry.html
+++ b/01-HTML-CSS/06-BEM model/amazon/Omri-Registry.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="lowerHeader">
-        <div class="lowerHeader__item"><a href="home.html">Home</a></div>
-        <div class="lowerHeader__item"><a href="Deal.html">Deal</a></div>
-        <div class="lowerHeader__item"><a href="Service.html">Service</a></div>
-        <div class="lowerHeader__item"><a href="Registry.html">Registry</a></div>
+        <div class="lowerHeader__item"><a href="Michael-home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Shani-Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Alex-Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Omri-Registry.html">Registry</a></div>
     </div>
 
     <div class="registryGrid">
