--- a/01-HTML-CSS/06-BEM model/amazon/MICHAEL/index.html
+++ b/01-HTML-CSS/06-BEM model/amazon/MICHAEL/index.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="lowerHeader">
-        <div class="lowerHeader__item"><a href="/Home/">Home</a></div>
-        <div class="lowerHeader__item"><a href="/Deal/">Deal</a></div>
-        <div class="lowerHeader__item"><a href="/Service/">Service</a></div>
-        <div class="lowerHeader__item"><a href="/Registry/">Registry</a></div>
+        <div class="lowerHeader__item"><a href="Michael-home.html">Home</a></div>
+        <div class="lowerHeader__item"><a href="Shani-Deal.html">Deal</a></div>
+        <div class="lowerHeader__item"><a href="Alex-Service.html">Service</a></div>
+        <div class="lowerHeader__item"><a href="Omri-Registry">Registry</a></div>
     </div>
 
     <div class="box">
