--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Comedy Specials.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Comedy Specials.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="dist/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="icon" href="https://pics.freeicons.io/uploads/icons/png/10274357991634942087-512.png">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <title>Comedy Specials</title>
 </head>
@@ -41,11 +43,34 @@
         </div>
     </div>
     <div class="socialmedia">
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/747/747374.png" alt="facebook"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Instagram"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/466/466963.png" alt="twitter"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/37/37922.png" alt="youtube"></i>
-<i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
+        <ul>
+            <li id="facebook">
+              <a id="facebook" href="https://www.facebook.com/JOEROGAN/" target="_blank">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a id="instagram" href="https://www.instagram.com/joerogan/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+              </li>
+            <li>
+              <a id="twitter" href="https://twitter.com/joerogan" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+              
+            </li>
+            <li>
+              <a id="youtube" href="https://www.youtube.com/channel/UCzQUP1qoWDoEbmsQxvdjxgQ" target="_blank">
+                <i class="fab fa-youtube"></i>
+              </a> 
+            </li>
+            <li>
+                <a id="vimeo" href="https://vimeo.com/joeroganexperience" target="_blank">
+                <i class="fab fa-vimeo"></i>
+            </a>
+            </li>
+          </ul>
 </div>
 </body>
 </html>
