--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
@@ -44,32 +44,32 @@
     </div>
     <div class="socialmedia">
         <ul>
-            <li id="facebook">
-              <a id="facebook" href="https://www.facebook.com/JOEROGAN/" target="_blank">
-                <i class="fab fa-facebook"></i>
-              </a>
-            </li>
-            <li>
-              <a id="instagram" href="https://www.instagram.com/joerogan/" target="_blank">
-                <i class="fab fa-instagram"></i>
-              </a>
-              </li>
-            <li>
-              <a id="twitter" href="https://twitter.com/joerogan" target="_blank">
-                <i class="fab fa-twitter"></i>
-              </a>
-              
-            </li>
-            <li>
-              <a id="youtube" href="https://www.youtube.com/channel/UCzQUP1qoWDoEbmsQxvdjxgQ" target="_blank">
-                <i class="fab fa-youtube"></i>
-              </a> 
-            </li>
-            <li>
-                <a id="vimeo" href="https://vimeo.com/joeroganexperience" target="_blank">
-                <i class="fab fa-vimeo"></i>
+          <li id="facebook">
+            <a id="facebook" href="https://www.facebook.com/JOEROGAN/" target="_blank">
+              <i class="fab fa-facebook facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a id="instagram" href="https://www.instagram.com/joerogan/" target="_blank">
+              <i class="fab fa-instagram instagram"></i>
             </a>
             </li>
+          <li>
+            <a id="twitter" href="https://twitter.com/joerogan" target="_blank">
+              <i class="fab fa-twitter twitter"></i>
+            </a>
+            
+          </li>
+          <li>
+            <a id="youtube" href="https://www.youtube.com/channel/UCzQUP1qoWDoEbmsQxvdjxgQ" target="_blank">
+              <i class="fab fa-youtube youtube"></i>
+            </a> 
+          </li>
+          <li>
+              <a id="vimeo" href="https://vimeo.com/joeroganexperience" target="_blank">
+              <i class="fab fa-vimeo vimeo"></i>
+          </a>
+          </li>
           </ul>
 </div>
 <div id="Joe" class="Homeimg">
