--- a/01-HTML-CSS/07-SCSS/Andrew/index.html
+++ b/01-HTML-CSS/07-SCSS/Andrew/index.html
@@ -12,57 +12,67 @@
 
 <body>
     <div class="wrapper">
-        <div class="wrapper__card">
-            <img class="wrapper__card_img" src="https://s3.images-iherb.com/cgn/cgn01066/l/119.jpg">
-            <h3 class="wrapper__card_title">
+        <div class="card">
+            <img class="card_img" src="https://s3.images-iherb.com/cgn/cgn01066/l/119.jpg">
+            <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
-            <div class="wrapper__card_reviews">
+            <div class="card_reviews">
                 <span class="material-icons">
                     star star star star star
                 </span>
-                <p class="wrapper__card_reviews-gray">
+                <p class="card_reviews-gray">
                     &nbsp 101822
                 </p>
             </div>
-            <div class="wrapper__card_pricing">
-            <h2 class="wrapper__card_pricing--discount">
+            <div class="card_pricing">
+            <h2 class="card_pricing--discount">
                 $10.00
             </h2>
-            <h2 class="wrapper__card_pricing--price">
-                &nbsp $13.60
+            <h2 class="card_pricing--price">
+                &nbsp$13.60
             </h2>
+            </div>
         </div>
-        </div>
-        <div class="wrapper__card">
-            <img class="wrapper__card_img" src="https://s3.images-iherb.com/cgn/cgn01066/l/119.jpg">
-            <h3 class="wrapper__card_title">
+        
+        <div class="card">
+            <img class="card_img" src="https://s3.images-iherb.com/opn/opn02866/l/36.jpg">
+            <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
-            <span class="material-icons">
-                star star star star star
-            </span>
-            <h2 class="wrapper__card--discount">
-                $10.00
-            </h2>
-            <h2 class="wrapper__card--price">
-                $13.60
-            </h2>
+            <div class="card_reviews">
+                <span class="material-icons">
+                    star star star star star
+                </span>
+                <p class="card_reviews-gray">
+                    &nbsp 101822
+                </p>
+            </div>
+            <div class="card_pricing">
+                <h2 class="card--normal">
+                    $70.00
+                </h2>
+            </div>
         </div>
-        <div class="wrapper__card">
-            <img class="wrapper__card_img" src="https://s3.images-iherb.com/cgn/cgn01066/l/119.jpg">
-            <h3 class="wrapper__card_title">
+
+        <div class="card">
+            <img class="card_img" src="https://s3.images-iherb.com/qst/qst06641/l/4.jpg">
+            <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
-            <span class="material-icons">
-                star star star star star
-            </span>
-            <h2 class="wrapper__card--discount">
-                $10.00
-            </h2>
-            <h2 class="wrapper__card--price">
-                $13.60
-            </h2>
+            <div class="card_reviews">
+                <span class="material-icons">
+                    star star star star star
+                </span>
+                <p class="card_reviews-gray">
+                    &nbsp 101822
+                </p>
+            </div>
+            <div class="card_pricing">
+                <h2 class="card--normal">
+                    $32.88
+                </h2>
+            </div>
         </div>
     </div>
 </body>
