--- a/01-HTML-CSS/07-SCSS/IdoGino/lala.html
+++ b/01-HTML-CSS/07-SCSS/IdoGino/lala.html
@@ -18,7 +18,7 @@
             <div class="wrapper_box_stars">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
                 <span class="fa fa-star"></span>
                 <span class="fa fa-star"></span>
             </div>
