--- a/01-HTML-CSS/07-SCSS/RASHEED/index.html
+++ b/01-HTML-CSS/07-SCSS/RASHEED/index.html
@@ -12,20 +12,20 @@
   <div class="wrapper">  
 
     <div class="wrapper_box">
-        <img class="wrapper_box-img" src="img/01.jpg" alt="img">
-        <h1 class="wrappper_box-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste cumque dolorem corrupti
+        <img class="wrapper_box__img" src="img/01.jpg" alt="img">
+        <h1 class="wrappper_box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste cumque dolorem corrupti
             , facere in totam blanditiis porro ipsum necessitatibus voluptate? Saepe iure deleniti distinctio quaerat voluptas nemo illum voluptate facilis!</h1>
     </div>
 
     <div class="wrapper_box">
-        <img class="wrapper--box-img" src="img/02.jpg" alt="img">
-        <h1 class="wrappper--box_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, 
+        <img class="wrapper__box__img" src="img/02.jpg" alt="img">
+        <h1 class="wrappper__box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, 
             ex reprehenderit mollitia optio quibusdam alias eligendi consequatur odio totam iusto expedita. Eos ut illum recusandae in ipsum repellat fugit maxime!</h1>
     </div>
 
     <div class="wrapper_box">
-        <img class="wrapper--box-img" src="img/03.jpg" alt="img">
-        <h1 class="wrappper--box_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequuntur magni esse quibusdam at. Ratione voluptate, 
+        <img class="wrapper__box__img" src="img/03.jpg" alt="img">
+        <h1 class="wrappper__box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequuntur magni esse quibusdam at. Ratione voluptate, 
             tempora quisquam sequi voluptates dolore sint quos quia facere. Nam, possimus. Reprehenderit, distinctio quia!</h1>
     </div>
 
