--- a/01-HTML-CSS/07-SCSS/LIOR/index.html
+++ b/01-HTML-CSS/07-SCSS/LIOR/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="warrper">
         <div class="card">
-        <!--box1-->
+        <!--card1-->
 
             <img src="https://s3.images-iherb.com/cgn/cgn01180/v/137.jpg" class="card__picture alt="">
             <div class="card__description">
@@ -20,7 +20,7 @@
                 <p> 56.77$</p>
             </div>
         </div>
-        <!--box2-->
+        <!--card2-->
         <div class="card">
                 <img src="https://s3.images-iherb.com/cgn/cgn01180/v/137.jpg" class="card__picture alt="">
             <div class="card__description">
@@ -30,7 +30,7 @@
                 <p> 56.77$</p>
             </div>
         </div>
-        <!--box3-->
+        <!--card3-->
         <div class="card">
             <img src="https://s3.images-iherb.com/cgn/cgn01180/v/137.jpg" class="card__picture alt="">
             <div class="card__description">
