--- a/01-HTML-CSS/07-SCSS/IdoGino/lala.html
+++ b/01-HTML-CSS/07-SCSS/IdoGino/lala.html
@@ -9,37 +9,62 @@
     <title>Document</title>
 </head>
 <body>
+<div class="main">
 
-    <div class="wrapper">
-        <div class="wrapper_box">
+    <div class="main_topHeader">
+
+
+        lalal
+    </div>
+
+    <div class="main_secondHeader">
+
+        lolol
+    </div>
+
+    <div class="main_topCommercial">
+
+        hop hop hop
+    </div>
+
+
+
+    
+
+
+
+
+
+    <div class="main_wrapper">
+        <div class="main_wrapper_box">
             <img src="https://s3.images-iherb.com/riu/riu76707/v/2.jpg" alt="">
             <h1><a href="">California Gold Nutrition, אבקת ויטמין C Gold, 1000 מ"ג, 250 גרם (8.81 אונקיות)
             </a></h1>
             <div class="wrapper_box_stars">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star"></span>
+                <span class="fa fa-star checked"></span>
                 <span class="fa fa-star"></span>
                 <span class="fa fa-star"></span>
             </div>
             <p>מחיר : 1001 ש"ח</p>
         </div>
 
-        <div class="wrapper_box">
+        <div class="main_wrapper_box">
             <img src="https://s3.images-iherb.com/lkn/lkn01414/v/55.jpg" alt="">
             <h1><a href="">California Gold Nutrition, אבקת ויטמין C Gold,1000 מ"ג, 250 גרם (8.81 אונקיות)
             </a></h1>
             <div class="wrapper_box_stars">
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star "></span>
                 <span class="fa fa-star"></span>
                 <span class="fa fa-star"></span>
             </div>
             <p>מחיר : 7000 ש"ח</p>
         </div>
 
-        <div class="wrapper_box">
+        <div class="main_wrapper_box">
             <img src="https://s3.images-iherb.com/osl/osl01388/v/32.jpg" alt="">
             <h1><a href="">California Gold Nutrition, אבקת ויטמין C Gold, 1000 מ"ג, 250 גרם (8.81 אונקיות)</a></h1>
             <div class="wrapper_box_stars">
@@ -59,6 +84,7 @@
 
 
     </div>
+</div>
     
 </body>
 </html>
