--- a/01-HTML-CSS/07-SCSS/Andrew/index.html
+++ b/01-HTML-CSS/07-SCSS/Andrew/index.html
@@ -11,9 +11,51 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="mainGrid">
+        <div class="header">
+            <img class="header_logo" src="https://cdn.phenompeople.com/CareerConnectResources/IHINGLOBAL/images/footer-logo-1629106414575.png">
+            <h2 class="header_item">
+                Shop
+            </h2>
+            <span class="material-icons">
+                expand_more
+                </span>
+            <h2 class="header_item">
+                Brands
+            </h2>
+            <span class="material-icons">
+                expand_more
+                </span>
+            <h2 class="header_item">
+                Help With
+            </h2>
+            <span class="material-icons">
+                expand_more
+                </span>
+        </div>
+        <div class="ad">
+            
+            <h2 class="ad-orange">
+                BF Weekend Deal!
+            </h2>
+            <h2 class="ad-black">
+                20% Off Sitewide
+            </h2>
+            <h3 class="ad-small">
+                Ends In: 00H 07M
+            </h3>
+            <button class="ad_button">
+                Shop Now
+            </button>
+        </div>
+        <div class="slider">
+            <img class="slider_img" src="https://s3.images-iherb.com/cms/banners/biombanner1124_002en-us.jpg">
+        </div>
         <div class="card">
             <img class="card_img" src="https://s3.images-iherb.com/cgn/cgn01066/l/119.jpg">
+            <button class="card_button">
+                Add to cart
+            </button>
             <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
@@ -26,10 +68,10 @@
                 </p>
             </div>
             <div class="card_pricing">
-            <h2 class="card_pricing--discount">
+            <h2 class="card_pricing-discount">
                 $10.00
             </h2>
-            <h2 class="card_pricing--price">
+            <h2 class="card_pricing-price">
                 &nbsp$13.60
             </h2>
             </div>
@@ -37,6 +79,9 @@
         
         <div class="card">
             <img class="card_img" src="https://s3.images-iherb.com/opn/opn02866/l/36.jpg">
+            <button class="card_button">
+                Add to cart
+            </button>
             <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
@@ -45,7 +90,7 @@
                     star star star star star
                 </span>
                 <p class="card_reviews-gray">
-                    &nbsp 101822
+                    &nbsp 19834
                 </p>
             </div>
             <div class="card_pricing">
@@ -57,6 +102,9 @@
 
         <div class="card">
             <img class="card_img" src="https://s3.images-iherb.com/qst/qst06641/l/4.jpg">
+            <button class="card_button">
+                Add to cart
+            </button>
             <h3 class="card_title">
                 California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 360 Fish Gelatin Softgels
             </h3>
@@ -65,12 +113,34 @@
                     star star star star star
                 </span>
                 <p class="card_reviews-gray">
-                    &nbsp 101822
+                    &nbsp 1523
                 </p>
             </div>
             <div class="card_pricing">
                 <h2 class="card--normal">
                     $32.88
+                </h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <img class="card_img" src="https://s3.images-iherb.com/cgn/cgn01842/l/45.jpg">
+            <button class="card_button">
+                Add to cart
+            </button>
+            <h3 class="card_title">
+                California Gold Nutrition, Immune 4, Immune System Support, 60 Veggie Capsules            </h3>
+            <div class="card_reviews">
+                <span class="material-icons">
+                    star star star star star
+                </span>
+                <p class="card_reviews-gray">
+                    &nbsp 82632
+                </p>
+            </div>
+            <div class="card_pricing">
+                <h2 class="card--normal">
+                    $6.00
                 </h2>
             </div>
         </div>
