--- a/01-HTML-CSS/07-SCSS/Or/index.html
+++ b/01-HTML-CSS/07-SCSS/Or/index.html
@@ -9,26 +9,32 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
+<div class="head"></div>
+<div class="second"></div>
+<div class="banner"></div>
+
+
+
+        <div class="card con__4">
             <img src="https://picsum.photos/200" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, a?</p>
             <p class="price">10$</p>
         </div>
-        <div class="card">
+        <div class="card card__5">
             <img src="https://picsum.photos/200" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, a?</p>
             <p class="price">10$</p>
         </div>
-        <div class="card">
+        <div class="card card__6">
             <img src="https://picsum.photos/200" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, a?</p>
             <p class="price">10$</p>
         </div>
-        <div class="card">
+        <div class="card card__7">
             <img src="https://picsum.photos/200" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, a?</p>
             <p class="price">10$</p>
         </div>
-    </div>
+
 </body>
 </html>
