--- a/01-HTML-CSS/07-SCSS/Shani/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/index.html
@@ -11,19 +11,29 @@
 
 <body>
     <div class="wrapper">
-        <div class="headergreen"></div>
-        <div class="headergreen"></div>
-        <div class="headergreen"></div>
-        <div class="headergreen"></div>
-        <div class="headergreen"></div>
-        <div class="headergreen"></div>
         
+        <div class="headergreen"></div>
+        <div class="headeryellow"> </div>
+        <div class="headerwhite"> </div>
         <div class="card1">
             <img src="iherb1.jpg">
             <p>California Gold Nutrition, Omega-3, Premium Fish Oil, 100 Fish Gelatin Softgels</p>
             <p class="price">$24.34</p>
 
         </div>
+        <div class="card1">
+            <img src="iherb1.jpg">
+            <p>California Gold Nutrition, Omega-3, Premium Fish Oil, 100 Fish Gelatin Softgels</p>
+            <p class="price">$24.34</p>
+
+        </div>
+        <div class="card1">
+            <img src="iherb1.jpg">
+            <p>California Gold Nutrition, Omega-3, Premium Fish Oil, 100 Fish Gelatin Softgels</p>
+            <p class="price">$24.34</p>
+
+        
+       </div>
     </div>
 
 </body>
