--- a/01-HTML-CSS/07-SCSS/Suarez/index.html
+++ b/01-HTML-CSS/07-SCSS/Suarez/index.html
@@ -6,8 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="dist\style.css">
     <title>Document</title>
+    
 </head>
 <body>
+   <div class="contanier">
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+        <div class="ad">
+
+        </div>
+        <div class="headerC">
+
+        </div>
+   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <h1>מבצעים מיוחדים</h1>
     <div class="wrapper">
         
