--- a/01-HTML-CSS/07-SCSS/shay/index.html
+++ b/01-HTML-CSS/07-SCSS/shay/index.html
@@ -8,10 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-  
+  <div class="main">
+      <div class="card header"></div>
+      <div class="card menu"></div>
+      <div class="card banner">
+          <div class="buton"></div>
+          <div class="buton"></div>
+          <div class="buton"></div>
+          <div class="buton"></div>
+      </div>
+      <div class="card see"></div>
       <div class="card">
           <div class="card-img">
-        <img src="https://m.media-amazon.com/images/I/818Q7bRbUkL._AC_SX425_.jpg" style="height: 100%%; width: 50%;" alt="">
+        <img src="https://m.media-amazon.com/images/I/818Q7bRbUkL._AC_SX425_.jpg" alt="">
      
       </div>
       <div class="card-explain">
@@ -30,7 +39,7 @@
  
     <div class="card">
         <div class="card-img">
-      <img src="https://s3.images-iherb.com/cet/cet10515/v/11.jpg" style="height: 100%%; width: 50%;" alt="">
+      <img src="https://s3.images-iherb.com/cet/cet10515/v/11.jpg"  alt="">
    
    </div>
    <div class="card-explain">
@@ -49,7 +58,7 @@
 
     <div class="card">
         <div class="card-img">
-      <img src="https://s3.images-iherb.com/cgn/cgn01065/v/156.jpg" style="height: 100%%; width: 50%;" alt="">
+      <img src="https://s3.images-iherb.com/cgn/cgn01065/v/156.jpg">
 
    </div>
    <div class="card-explain">
@@ -63,6 +72,92 @@
       </p>
     </div>
     </div>
+    <div class="card">
+        <div class="card-img">
+      <img src="https://s3.images-iherb.com/nrt/nrt04290/v/47.jpg">
 
+   </div>
+   <div class="card-explain">
+        <h4>
+            Nature's Bounty, Calcium Magnesium Zinc with Vitamin D3, 100 Coated Caplets
+        </h4>
+    </div>
+    <div class="card-price">
+      <p>
+         30$
+      </p>
+    </div>
+    </div>
+    <div class="card">
+        <div class="card-img">
+      <img src="https://m.media-amazon.com/images/I/818Q7bRbUkL._AC_SX425_.jpg" alt="">
+   
+    </div>
+    <div class="card-explain">
+        <h4>
+            vic's vaporub topical cough suppressant
+            50ml 1.76oz
+        </h4>
+      </div>
+      <div class="card-price">
+      <p>
+          20$
+      </p>
+  </div>
+    </div>
+
+
+  <div class="card">
+      <div class="card-img">
+    <img src="https://s3.images-iherb.com/cet/cet10515/v/11.jpg"  alt="">
+ 
+ </div>
+ <div class="card-explain">
+      <h4>
+          Cetaphil, Soothing Gel Cream with Aloe, Medium, Fragrance Free, 16 oz (453 g)
+      </h4>
+
+  </div>
+      <div class="card-price">
+    <p>
+        30$
+    </p>
+  </div>
+  </div>
+
+
+  <div class="card">
+      <div class="card-img">
+    <img src="https://s3.images-iherb.com/cgn/cgn01065/v/156.jpg">
+
+ </div>
+ <div class="card-explain">
+      <h4>
+          California Gold Nutrition, Vitamin D3, 125 mcg (5,000 IU), 90 Fish Gelatin Softgels
+      </h4>
+  </div>
+  <div class="card-price">
+    <p>
+        40$
+    </p>
+  </div>
+  </div>
+  <div class="card">
+      <div class="card-img">
+    <img src="https://s3.images-iherb.com/nrt/nrt04290/v/47.jpg">
+
+ </div>
+ <div class="card-explain">
+      <h4>
+          Nature's Bounty, Calcium Magnesium Zinc with Vitamin D3, 100 Coated Caplets
+      </h4>
+  </div>
+  <div class="card-price">
+    <p>
+       30$
+    </p>
+  </div>
+  </div>
+</div>
 </body>
 </html>
