--- a/01-HTML-CSS/07-SCSS/chaim/index.html
+++ b/01-HTML-CSS/07-SCSS/chaim/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.scss">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sist/style.css">
 </head>
 <body>
     <div class="wrapper"></div>
