--- a/01-HTML-CSS/07-SCSS/OmriAharonov/index.html
+++ b/01-HTML-CSS/07-SCSS/OmriAharonov/index.html
@@ -19,17 +19,17 @@
         <div class="card">
             <img src="https://picsum.photos/seed/picsum/200/300">
             <p>טקסט כלשהו</p>
-            <p>מחיר: 23 ש"ח</p>
+            <p>price: 23$</p>
         </div>
         <div class="card">
             <img src="https://picsum.photos/seed/picsum/200/300">
             <p>טקסט כלשהו</p>
-            <p>מחיר: 23 ש"ח</p>
+            <p>price: 23$</p>
         </div>
         <div class="card">
             <img src="https://picsum.photos/seed/picsum/200/300">
             <p>טקסט כלשהו</p>
-            <p>מחיר: 23 ש"ח</p>
+            <p>price: 23$</p>
         </div>
     </div>
     
