--- a/01-HTML-CSS/07-SCSS/LIOR/index.html
+++ b/01-HTML-CSS/07-SCSS/LIOR/index.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="warrper">
+    <div class="warrper"> 
+
+
+        <div class="card header_1"></div> 
+        <div class="card header_1"></div> 
+        <div class="card header_1"></div> 
+        <div class="card header_2"></div> 
+        <div class="card header_2"></div> 
+        <div class="card header_2"></div> 
+
+
         <div class="card">
         <!--card1-->
 
@@ -41,5 +51,6 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
