--- a/01-HTML-CSS/07-SCSS/Roi/index.html
+++ b/01-HTML-CSS/07-SCSS/Roi/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Deezer</title>
 </head>
 <body>
-    <div class="SideMenu">
-        <i class="material-icons">rotate_left</i><b>Music</b>
+    <div class="SideWrapper">
+        <div class="SideWrapper__MainLogo"><img src="logos/Deezer-Logo.png"></div>
+        <i class="fas fa-play-circle"></i>
             <p class="Podcasts"><b>Podcasts</b></p>
             <p class="Explore"><b>Explore</b></p>
             <p class="Favourits"><b>Favourits</b></p>
