--- a/01-HTML-CSS/07-SCSS/Roi/index.html
+++ b/01-HTML-CSS/07-SCSS/Roi/index.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <div class="SideWrapper">
-        <div class="SideWrapper__MainLogo"><img src="logos/Deezer-Logo.png"></div>
-        <i class="fas fa-play-circle"></i>
-            <p class="Podcasts"><b>Podcasts</b></p>
-            <p class="Explore"><b>Explore</b></p>
-            <p class="Favourits"><b>Favourits</b></p>
-            
+        <div class="SideWrapper__MainLogo"><img src="logos/Deezer-Logo.png"></div> 
+        <div Class="SideWrapperMenu">
+            <div class="SideWrapperMenu__item"><b>Music</b></div>
+            <div class="SideWrapperMenu__item"><b>Podcasts</b></div>
+            <div class="SideWrapperMenu__item"><b>Explore</b></div>
+            <div class="SideWrapperMenu__item"><b>Favourits</b></div>
+        </div>
         </div>
     </div>
 </body>
