--- a/01-HTML-CSS/07-SCSS/RASHEED/index.html
+++ b/01-HTML-CSS/07-SCSS/RASHEED/index.html
@@ -1,35 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="dist/style.css">
+  <title>Document</title>
 </head>
 <body>
+  <div class="grid">
+    <div class="box header"></div>
+    <div class="box hero"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    
+  </div>
+  <div class="wrapper">
 
-  <div class="wrapper">  
+    <div class="wrapper-flex">
+      <img class="wrapper-flex-img" src="img/01.jpg" alt="img">
+      <p class="wrapper-flex-text">hello</p>
 
-    <div class="wrapper_box">
-        <img class="wrapper_box__img" src="img/01.jpg" alt="img">
-        <h1 class="wrappper_box__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste cumque dolorem corrupti
-            , facere in totam blanditiis porro ipsum necessitatibus voluptate? Saepe iure deleniti distinctio quaerat voluptas nemo illum voluptate facilis!</h1>
+      <div class="wrapper-flex">
+        <img class="wrapper-flex-img" src="img/02.jpg" alt="img">
+        <p class="wrapper-flex-text">hello</p>
+
+        <div class="wrapper-flex">
+          <img class="wrapper-flex-img" src="img/03.jpg" alt="img">
+          <p class="wrapper-flex-text">hello</p>
     </div>
-
-    <div class="wrapper_box">
-        <img class="wrapper__box__img" src="img/02.jpg" alt="img">
-        <h1 class="wrappper__box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, 
-            ex reprehenderit mollitia optio quibusdam alias eligendi consequatur odio totam iusto expedita. Eos ut illum recusandae in ipsum repellat fugit maxime!</h1>
-    </div>
-
-    <div class="wrapper_box">
-        <img class="wrapper__box__img" src="img/03.jpg" alt="img">
-        <h1 class="wrappper__box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consequuntur magni esse quibusdam at. Ratione voluptate, 
-            tempora quisquam sequi voluptates dolore sint quos quia facere. Nam, possimus. Reprehenderit, distinctio quia!</h1>
-    </div>
-
-  </div>  
+  </div>
 </body>
 </html>
-
