--- a/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
@@ -8,8 +8,8 @@
     <title>IMBORED.COM</title>
     <link rel="stylesheet" href="dist/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,9 +17,22 @@
         <div class="header">
             <h1>I'M BORED.COM</h1>
             <input type="text" placeholder="Search.." name="search">
-      <button type="submit">Submit</button>
+            <button type="submit">Submit</button>
         </div>
-        <div class="games adventure"></div>
+
+       
+            <div class="games adventure one">
+                <img src="img/redbeard1.jpg">
+            </div>
+            <div class="games adventure two">
+                <img src="img/fancypants1.jpg">
+            </div>
+            <div class="games adventure three">
+                <img src="img/cactus1.jpg">
+            </div>
+
+
+        
         <div class="games classic"></div>
         <div class="popular games "></div>
         <div class="games multiplayer"></div>
