--- a/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
@@ -20,19 +20,29 @@
             <button type="submit">Submit</button>
         </div>
 
-       
-            <div class="games adventure one">
-                <img src="img/redbeard1.jpg">
-            </div>
-            <div class="games adventure two">
-                <img src="img/fancypants1.jpg">
-            </div>
-            <div class="games adventure three">
-                <img src="img/cactus1.jpg">
-            </div>
+
+        <div class="games adventure one">
+            <h2>ADVENTURE GAMES</h2>
+            <div class="hover">
+            <img src="img/redbeard1.jpg">
+            <p>RED BEARD</p>
+           </div>
+        </div>
+        <div class="games adventure two">
+            <div class="hover">
+            <img src="img/fancypants1.jpg">
+            <p>FANCY PANTS</p>
+        </div>
+        </div>
+        <div class="games adventure three">
+            <div class="hover">
+            <img src="img/cactus1.jpg">
+            <p>CACTUS McCOY</p>
+           </div>
+        </div>
 
 
-        
+
         <div class="games classic"></div>
         <div class="popular games "></div>
         <div class="games multiplayer"></div>
