--- a/01-HTML-CSS/07-SCSS/tamir.work/index.html
+++ b/01-HTML-CSS/07-SCSS/tamir.work/index.html
@@ -11,33 +11,34 @@
 
 <body>
     <div class="wrapper">
-        <div class="old">
-            <div class="title">
-                old drinks :)
-            </div>
-            <div class="box1">
-                <div class="img"><img src="drinks/שוקו.jpg" alt="">
-                </div>
-                <div class="box game">2</div>
-                <div class="game2"></div>
-                <div class="game3"></div>
-                <div class="game4"></div>
-                <div class="game5"></div>
-                <div class="game6"></div>
-            </div>
+        <div class="box title"></div>
+        <div class="box1">
+            <span class="box1__img"></span>
+            <p>שוקו</p>
         </div>
-        <div class="wrapper2">
-            <div class="new">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+        <div class="box5"></div>
+        <div class="box6"></div>
+        <div class="box7"></div>
+        <div class="box8"></div>
+        <div class="box9"></div>
+        <div class="box10"></div>
 
-            </div>
+    </div>
+    <div class="wrapper2">
+        <div class="new">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+
         </div>
+    </div>
 </body>
 
 </html>
