--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -37,7 +37,7 @@
 
 <h1>MOST ADDICTING GAMES</h1>
     <div class="main">
-        <div class="box gmain " ><img src="" alt="games"></div>
+        <div class="box gmain " ><a href=""></a><p>Lorem ipsum  </p></div>
         <div class="box item1"><img src="img/g10.jpg" alt=""><a href=""></a><p>Lorem ipsum  </p></div>
         <div class="box item2"><img src="img/g11.jpg" alt=""><a href=""></a><p>Lorem ipsum  </p></div>
         <div class="box item3"><img src="img/g12.jpg" alt=""><a href=""></a><p>Lorem ipsum  </p></div>
