--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -25,10 +25,10 @@
 </ul>
 
 <div class="menu2">
-<div class="box m1">acion</div>
-<div class="box m2">team</div>
-<div class="box m3">solo</div>
-<div class="box m4">favorite</div>
+<div class="box m1"><a href="">acion</a> </div>
+<div class="box m2"><a href="">team</a> </div>
+<div class="box m3"><a href=""> solo</a></div>
+<div class="box m4"><a href=""> favorite</a></div>
 </div>
 
 
