--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
@@ -1,16 +1,16 @@
-ragnarok : https://c.tenor.com/BgeTcebKLGQAAAAM/poring-coeur.gif
-quake 3 : https://64.media.tumblr.com/4e0ab2667265d2a60caeac3750e2a079/tumblr_prtlu0TjgI1xfbjjmo1_540.gifv
-fifa: https://i.gifer.com/I6cj.gif
-counter strike : https://c.tenor.com/Q9c3vS96jjIAAAAd/one-tap-headshot.gif
-the sims : https://i.gifer.com/1T4E.gif
-rocket league : https://c.tenor.com/ty2PXuyTIOIAAAAd/rocket-league.gif
-tony hawk 2: https://c.tenor.com/Chn9S2Esj3AAAAAM/tony-hawk-pro-skater.gif
-chess : https://c.tenor.com/4TibSvLl6M0AAAAd/uriel-quesos-gambit.gif
-poker : https://i.gifer.com/C1sN.gif
-starcraft : https://i.gifer.com/FMDV.gif
+<!-- ragnarok : 
+quake 3 : 
+fifa: 
+counter strike : 
+the sims : 
+rocket league : 
+tony hawk 2: 
+chess : 
+poker : 
+starcraft : 
 
 
-oni : https://i.gifer.com/DiOL.gif
+oni : 
 doom : https://c.tenor.com/3Zfog73r0gYAAAAC/doom-2005.gif
 gta : https://i.gifer.com/YhwH.gif
 maxpayme : https://i.gifer.com/MzK.gif
@@ -21,7 +21,7 @@ red dead : https://i.gifer.com/XIN7.gif
 assassins : https://i.gifer.com/WQPj.gif
 portal 2 : https://i.gifer.com/3mfH.gif
 
-
+ -->
 
 
 <!DOCTYPE html>
@@ -31,7 +31,7 @@ portal 2 : https://i.gifer.com/3mfH.gif
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.png" sizes="any">
+    <link rel="icon" href="img/favicon.ico" sizes="any">
     <title>Addictive Games</title>
 
 </head>
@@ -43,6 +43,7 @@ portal 2 : https://i.gifer.com/3mfH.gif
 
         <div class="header__logo">
 
+            <img src="img/Screen Shot 2021-11-30 at 22.52.47.png" alt="">
 
         </div>
 
@@ -54,10 +55,30 @@ portal 2 : https://i.gifer.com/3mfH.gif
 
         <div class="headermenu">
 
-            <div class="headermenu__card"></div>
-            <div class="headermenu__card"></div>
-            <div class="headermenu__card"></div>
-            <div class="headermenu__upgrade"></div>
+            <div class="headermenu__box">
+
+                <img src="img/games.png" alt="">
+                <p>Games</p>
+
+            </div>
+
+            <div class="headermenu__box"></div>
+
+                <img src="img/hot.png" alt="">
+                <p>hot</p>
+
+            <div class="headermenu__box">
+
+                <img src="img/multiplayer.png">
+                <p>multiplayer</p>
+
+            </div>
+
+
+            <div class="headermenu__upgrade">
+
+                <img src="img/Screen Shot 2021-12-01 at 0.08.44.png" alt="">
+            </div>
             <div class="headermenu__account">
                 <div class="login__register">
                     Register
@@ -73,14 +94,61 @@ portal 2 : https://i.gifer.com/3mfH.gif
 
             <div class="menubar__cards">
 
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+
+                    <img src="img/Word.png" alt="">
+                    <p>Word</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/Avoider.png" alt="">
+                    <p>Avoider</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/Clicker.png" alt="">
+                    <p>Clicker</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/FirstPerson.png" alt="">
+                    <p>First First</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/High Scores.png" alt="">
+                    <p>High Scores</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/InstantGames.png" alt="">
+                    <p>Instant Games</p>
+
+                </div>
+                
+                <div class="card">
+
+                    <img src="img/IO.png" alt="">
+                    <p>IO Games</p>
+
+                </div>
+
+                <div class="card">
+
+                    <img src="img/Shooter.png" alt="">
+                    <p>Shooter</p>
+
+                </div>
 
             </div>
 
@@ -106,27 +174,92 @@ portal 2 : https://i.gifer.com/3mfH.gif
         <div class="sportarcade">
 
             <div class="title">
-                <h1>Arcade & Sport Games</h1>
+                <h1>My Favorite - Arcade & Sport Games</h1>
             </div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
-            <div class="gamebox"></div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/BgeTcebKLGQAAAAM/poring-coeur.gif" alt="">
+                <p>Ragnarok Online</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://64.media.tumblr.com/4e0ab2667265d2a60caeac3750e2a079/tumblr_prtlu0TjgI1xfbjjmo1_540.gifv" alt="">
+                <p>Quake III Arena</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/I6cj.gif" alt="">
+                <p>EA Sports FIFA</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/Q9c3vS96jjIAAAAd/one-tap-headshot.gif" alt="">
+                <p>Counter Strike</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/1T4E.gif" alt="">
+                <p>The Sims</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/ty2PXuyTIOIAAAAd/rocket-league.gif" alt="">
+                <p>Rocket League</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/Chn9S2Esj3AAAAAM/tony-hawk-pro-skater.gif" alt="">
+                <p>Tony Hawk's Pro Skater 2</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://c.tenor.com/4TibSvLl6M0AAAAd/uriel-quesos-gambit.gif" alt="">
+                <p>Chess.com</p>
+
+            </div>
+
+            <div class="gamebox">
+
+               <img src="https://i.gifer.com/FMDV.gif" alt="">
+               <p>starcraft</p>
+
+            </div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/C1sN.gif" alt="">
+                <p>Texas Holdem Poker</p>
+
+            </div>
 
         </div>
 
         <div class="storyline">
 
             <div class="title">
-                <h1>Storyline Games</h1>
+                <h1>My Favorite - Storyline Games</h1>
             </div>
-            <div class="gamebox"></div>
+
+            <div class="gamebox">
+
+                <img src="https://i.gifer.com/DiOL.gif" alt="">
+                
+            </div>
             <div class="gamebox"></div>
             <div class="gamebox"></div>
             <div class="gamebox"></div>
